css/style1.css
@charset  "UTF-8";

@import  "font-awesome.min.css";

@import  "https://fonts.googleapis.com/css?family=Lato:300,400";

@import  "https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700,800";
/* On off switch. Lel. Courtesy of proto.io */

/*
    COLOR SCHEME

        Dark
            #1
                #1B1C1E
                Background of the page
            #2
        Light
            #1
                #EEEEEE
                Used for body of all light items
            #2
                #C9C9C9
                Used for the borders
        Text
            #1
                #ABB2BF
        Highlight
            #1
*/

.cmn-toggle {
  position: absolute;
  margin-left: -9999px;
  visibility: hidden;
}
.cmn-toggle + label {
  display: block;
  position: relative;
  cursor: pointer;
  outline: none;
  user-select: none;
}
input.cmn-toggle-round + label {
  padding: 2px;
  width: 120px;
  height: 60px;
  background-color: #dddddd;
  border-radius: 60px;
}
input.cmn-toggle-round + label:before,
input.cmn-toggle-round + label:after {
  display: block;
  position: absolute;
  top: 1px;
  left: 1px;
  bottom: 1px;
  content: "";
}
/*200*/
input.cmn-toggle-round + label:before {
  right: 1px;
  background-color: #f1f1f1;
  border-radius: 60px;
  transition: background 0.4s;
}
input.cmn-toggle-round + label:after {
  width: 58px;
  background-color: #fff;
  border-radius: 100%;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
  transition: margin 0.4s;
}
input.cmn-toggle-round:checked + label:before {
  background-color: #f50a2c;
}
input.cmn-toggle-round:checked + label:after {
  margin-left: 60px;
}
.switch {
    display: block;
    position: fixed;
    left: 0;
    top: 3.1em;
    z-index: 10;
}

.text {
    fill: none;
    stroke-width: 6;
    stroke-linejoin: round;
    stroke-dasharray: 70 330;
    stroke-dashoffset: 0;
    -webkit-animation: stroke 6s infinite linear;
    animation: stroke 6s infinite linear; }
    .text:nth-child(5n + 1) {
        stroke: #F2385A;
        -webkit-animation-delay: -1.2s;
        animation-delay: -1.2s; }
    .text:nth-child(5n + 2) {
        stroke: #F5A503;
        -webkit-animation-delay: -2.4s;
        animation-delay: -2.4s; }
    .text:nth-child(5n + 3) {
        stroke: #E9F1DF;
        -webkit-animation-delay: -3.6s;
        animation-delay: -3.6s; }
    .text:nth-child(5n + 4) {
        stroke: #56D9CD;
        -webkit-animation-delay: -4.8s;
        animation-delay: -4.8s; }
    .text:nth-child(5n + 5) {
        stroke: #3aa1bf;
        -webkit-animation-delay: -6s;
        animation-delay: -6s; }

@-webkit-keyframes stroke {
    100% {
        stroke-dashoffset: -400; } }
@keyframes stroke {
    100% {
        stroke-dashoffset: -400; } }

.content {
    font: 800 14.5em/1  'Open Sans', Impact; }

svg {
    width: 50%;
    margin: 0 auto 50px;
    display: block;
    text-transform: uppercase; }

/*# sourceMappingURL=logoArt.css.map */

* {
    margin: 0;
    padding: 0;
}

body {
    background-color: #1B1C1E;
    font-family: "Century Gothic",Helvetica,sans-serif;
    color: #ABB2BF;
    font-weight: 100;
    line-height: 1.65em;
    margin: 0;
    height: 100%;
}

//Navigation bar
.nav ul {
    list-style: none;
    text-align: center;
    padding: 0;
    margin: 0;
    background-color: #282C34
}
.nav li {
    font-family: 'Oswald',sans-serif;
    text-align: center;
    display: inline-block;
    width: 7em;
    border-bottom: none;
    height: 2.3em;
    line-height: 2.3em;
    font-size: 1.4em;
    /*padding-right: 15px; */
}
.nav a {
    text-decoration: none;
    color: #ABB2BF;
    display: block;
    transition: .2s background-color
}
.nav a:hover {
    background-color: #005f5f
}
.nav a.active {
    background-color: #fff;
    color: #444;
    cursor: default
}
.nav {
    width: 100%;
    background-color: #000;
    opacity: .888;
    z-index: 100;
}

.separator {
    /*We gotta design a separator*/
    background-image: url(../images/graphics/secb1.png);
    background-repeat: no-repeat;
    background-size: contain;
    /*opacity: .4;*/
    padding-top: 2em;
    padding-bottom: 2em;
}

.Logo {
    //Empty?
}

section {
    display: block;
    height: 100%;
    width: 100%;
    padding: 2em;
    box-sizing: border-box;
}

#sect1 {
    background-image: url(../images/bg.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    padding: 15em;
    text-align: center;
}
#sect2,#sect3,#sect4,#sect5, #sect6 {
    padding-left: 10%;
    padding-right: 10%;
}

.gist-data {
    background-color: #000000
}

a {
    text-decoration: none;
}

.map {
    display: block;
    padding-top: 2em;
    opacity: .666;
    text-align : center;
    position: relative;
    left: auto;
    right: auto;
    margin-right: auto;
    margin-left: auto;
}

.Subline {
    /*The line below the logo in section 1*/
    font-size: 2em;
    width: auto;
    margin: auto;
}

h1 {
    position: relative;
    z-index: 3;
    right: 0;
    left: 0;
    margin-right: auto;
    margin-left: auto;
    width: auto;
    text-align: center;
    margin-top: 0;
    padding: 0.5em;
    color: #ABB2BF;
    font-size: 2em;
    border: 0.4em solid #303030;
    border-radius: 0 12.5em 0 12.5em;
    -moz-border-radius: 0 12.5em;
    -webkit-border-radius: 0 12.5em 0 12.5em;
}
h2 {
    text-align: center;
    padding-bottom: 20px;
}
h3 {
    /**/
}

p {
    padding: 0.5em;
    padding-top: 1em;
    text-align: justify;
}

strong, .strongcountdown {
    color: #FFF;
    font-weight: 400;
}

#agendaimg {
    display: block;
    max-width: 90%;
    max-height: 90%;
    padding: 10px;
    padding-top: 4%;
    opacity: .6;
}

.copyright {
    position: fixed;
    left: 0;
    right: 0;
    margin-right: auto;
    margin-left: auto;
    bottom: 0;
    z-index: 10;
    text-align: center;
    background-color: #000;
    opacity: .666;
    font-size: 75%;
}
.copyright a {
    color: #f50a2c;
    font-weight: 700;
    text-decoration: none;
}

#signuptoggler {
    width:100%;
    margin: 1em;
    margin-left: auto;
    margin-right: auto;
    left:0;
    right:0;
    text-align: center;
}

.signup {
    position: fixed;
    left: 0;
    right: 0;
    margin-right: auto;
    margin-left: auto;
    bottom: 0;
    z-index: 20;
    padding: 25px 50px 50px 50px;
    color: #1B1C1E;
    background-color: #EEE;
    opacity: 0.85;
    resize: both;
    overflow: auto;
}


input[type="text"] {
    display: inline;
    margin: 0;
    font-size: 20px;
    appearance: none;
    box-shadow: none;
    border-radius: none;
    padding: 10px;
    border: solid 5px #c9c9c9;
    transition: border 0.3s, background-color 0.3s;
    outline: none;
}
input[type="text"]:focus {
    border: solid 5px #969696;
    background-color: #000000;
    color: #ABB2BF;
}

.submitter {
    display: block;
    font-size: 24px;
    position: absolute;
    right: 0;
    top: 0;
    width: 16em;
    height: 100%;
    float: right;
    appearance: none;
    box-shadow: none;
    border-radius: none;
    padding: 10px;
    border: none;
}

button:hover, .submitter:hover {
    background-color: #005f5f;
    color: #ABB2BF;
    border: solid 5px #969696;
}
button{
    appearance: none;
    box-shadow: none;
    border-radius: none;
    padding: 10px;
    border: none;
    border: solid 5px #c9c9c9;
    transition: border 0.3s, background-color 0.3s;
}

#xButton {
    position: static;
    height: 2em;
    width: 2em;
    text-align: center;
    top: 0;
    left: 0;
    padding: 1em;
    margin: 0;
}
#xButton:hover {
    background-color: #FF4444;
}

#phoneinfo, #emailinfo{
    display: inline-block;
    text-align: center;
    color: #1B1C1E;
    background-color: #EEEEEE;
    width: 25%;
    padding: 2%;
    border: solid 1em #c9c9c9;
    transition: background-color 0.3s, border-color 1s;
}
#phoneinfo {
    float: left;
}
#emailinfo {
    float: right;
}
#phoneinfo:hover, #emailinfo:hover {
    background-color: #005f5f;
    border-color: #969696;
}

label {
    width: 200px;
    display: inline-block;
    text-align: right;

}

.inputfield {
    padding: 5px;
}

ul[class="droplist"]>li {
    background-color: #EEE;
    color: #000;
    font-size: 1em;
    list-style: none;
    padding: 1.25em;
    padding-left: 4em;
    margin: 1em;
}
ul[class="droplist"]>li:hover > div[class="description"]{
    /*On hover*/
    max-height: 10em;
    /*transition: max-height 3s;*/
}
ul[class="droplist"]>li>div[class="description"] {
    /*Default*/
    overflow: hidden;
    max-height: 0;
    transition: max-height 1s;
}
ul[class="droplist"]>li>div[class="heading"] {
    display: inline-block;
}
ul[class="droplist"]>li>div[class="headingright"] {
    display: inline-block;
}
ul#rules {
    padding-left: 3%;
}

.styled{
    margin-bottom: 50px;
    margin-top: 25px;
}
.styled div {
    display: inline-block;
    margin-left: 10px;
    font-size: 50px;
    font-weight: 100;
    line-height: 1;
    text-align: left;
}
.styled div:first-child {
    margin-left: 0;
}
.styled div span {
    display: block;
    border-top: 1px solid #CECECE;
    padding-top: 3px;
    font-size: 12px;
    font-weight: normal;
    text-transform: uppercase;
    text-align: left;
}

